--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "sass": "^1.76.0"
+  },
+  "devDependencies": {
+    "@prettier/plugin-php": "^0.22.2"
   }
 }
